--- a/install/templates/step6.html.twig
+++ b/install/templates/step6.html.twig
@@ -51,7 +51,9 @@
                 <input type="hidden" name="step" value="{{ current_step }}">
                 <input type="hidden" name="language" value="{{ language }}">
                 <input type="hidden" name="step" value="{{ next_step }}">
-                <input type="submit" name="submit" class="btn btn-sm btn-primary" value="{% trans %}Continue to step{% endtrans %} {{ next_step }}">
+                <div class="mt-4 text-center">
+                    <input type="submit" name="submit" class="btn btn-sm btn-primary" value="{% trans %}Continue to step{% endtrans %} {{ next_step }}">
+                </div>
             </form>
         </div>
     </div>
