i18n(locale): updated Spanish language

--- a/install/templates/step1.html.twig
+++ b/install/templates/step1.html.twig
@@ -61,6 +61,19 @@
                                     <div class="card h-100 language-card">
                                         <div class="card-body d-flex align-items-center">
                                             <div class="form-check mb-0">
+                                                <input id="language_es_ES" class="form-check-input" type="radio" name="language" value="es_ES">
+                                                <label for="language_es_ES" class="form-check-label d-flex align-items-center">
+                                                    <span class="fi fi-es me-2"></span> Español
+                                                </label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                
+                                <div class="col">
+                                    <div class="card h-100 language-card">
+                                        <div class="card-body d-flex align-items-center">
+                                            <div class="form-check mb-0">
                                                 <input id="language_fr_FR" class="form-check-input" type="radio" name="language" value="fr_FR">
                                                 <label for="language_fr_FR" class="form-check-label d-flex align-items-center">
                                                     <span class="fi fi-fr me-2"></span> Français
