--- a/install/templates/step1.html.twig
+++ b/install/templates/step1.html.twig
@@ -126,6 +126,19 @@
                                     <div class="card h-100 language-card">
                                         <div class="card-body d-flex align-items-center">
                                             <div class="form-check mb-0">
+                                                <input id="language_pt_PT" class="form-check-input" type="radio" name="language" value="pt_PT">
+                                                <label for="language_pt_PT" class="form-check-label d-flex align-items-center">
+                                                    <span class="fi fi-pt me-2"></span> Português
+                                                </label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                
+                                <div class="col">
+                                    <div class="card h-100 language-card">
+                                        <div class="card-body d-flex align-items-center">
+                                            <div class="form-check mb-0">
                                                 <input id="language_lt_LT" class="form-check-input" type="radio" name="language" value="lt_LT">
                                                 <label for="language_lt_LT" class="form-check-label d-flex align-items-center">
                                                     <span class="fi fi-lt me-2"></span> Lietuvių
